Closed Bug 1140688 Opened 10 years ago Closed 10 years ago

###!!! ASSERTION: AppleVDADecoder: Couldn't create decoder!: 'Error', file dom/media/fmp4/apple/AppleVDADecoder.cpp, line 403

Categories

(Core :: Audio/Video, defect, P2)

x86
macOS
defect

Tracking

()

RESOLVED FIXED
mozilla39
Tracking Status
firefox39 --- fixed

People

(Reporter: cpeterson, Assigned: jya)

References

(Blocks 1 open bug, )

Details

Attachments

(1 file, 1 obsolete file)

STR: 1. Using a debug build, load http://dashif.org/reference/players/javascript/1.1.2/index.html 2. Select the "Microsoft #1" stream (or any of the "Microsoft #" streams). 3. Play the video. 4. While the video is playing, seek ahead and back a couple times on the playback progress bar. RESULT: AppleVDADecoder assertion failures (repeated a couple times): [23:10:11.457] vtDecompressionDuctCreate signalled err=-8973 (err) (Could not select and open decoder instance) at /SourceCache/CoreMedia_frameworks/CoreMedia-1562.107/Sources/VideoToolbox/VTDecompressionSession.c line 1181 [Child 68994] ###!!! ASSERTION: AppleVDADecoder: Couldn't create decoder!: 'Error', file /builds/slave/m-cen-osx64-st-an-d-0000000000/build/src/dom/media/fmp4/apple/AppleVDADecoder.cpp, line 403 [Child 68994] ###!!! ASSERTION: AppleVDADecoder an error occurred: 'Error', file /builds/slave/m-cen-osx64-st-an-d-0000000000/build/src/dom/media/fmp4/apple/AppleVDADecoder.cpp, line 505
Blocks: DASH-IF
This is just a NS_Warning when a VDA (hardware decoder) can't be created. depending on your hardware card, there's only a certain number of hardware decoders that can be created. A Mac mini 2010 can only open 4. When that happens, it will fall back to software decoding with Apple VideoToolbox framework instead. There's nothing wrong, it's behaving as designed. Or are you seeing something else like playback stopping?
Flags: needinfo?(cpeterson)
(In reply to Jean-Yves Avenard [:jya] from comment #1) > This is just a NS_Warning when a VDA (hardware decoder) can't be created. It's an NS_ERROR, not an NS_WARNING isn't it? That's a critical error. Maybe it should be changed to something less fatal if it's a warning.
(In reply to Jean-Yves Avenard [:jya] from comment #1) > Or are you seeing something else like playback stopping? I did see some intermittent problems with the video was black or a frozen frame after I seeked to a new position, but might be the problem I reported in bug 1140690. Note that I only see these AppleVDADecoder assertion failures for the "Microsoft ##" videos. I selected a few other videos randomly and none of them hit this assertion.
Flags: needinfo?(cpeterson)
I hit this assertion on YouTube, too, but not as easily as with the DASH-IF player's Microsoft videos.
NS_ERROR asserts on debug builds, not on release. So this doesn't affect users, but if it's expected behaviour we should change it to an NS_WARNING or a debug message.
Priority: -- → P2
use NS_WARNING, and update message to be more explicit
Attachment #8575780 - Flags: review?(giles)
Assignee: nobody → jyavenard
Status: NEW → ASSIGNED
note that the inability to create a VDA decoder will be greatly reduced once bug 1128381 lands, as we now only use a single decoder at a time rather than one for every resolutions
use NS_WARNING, and update message to be more explicit v2
Attachment #8575797 - Flags: review?(giles)
Attachment #8575780 - Attachment is obsolete: true
Attachment #8575780 - Flags: review?(giles)
Comment on attachment 8575797 [details] [diff] [review] Only print a warning when VDA decoder couldn't be created Looks good, thanks.
Attachment #8575797 - Flags: review?(giles) → review+
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla39
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: