Bug 1140688: Only print a warning when VDA decoder couldn't be created. r=rillian

--HG--
extra : rebase_source : 3292410fbd8a8b03469ece9a257d6cd744ce5fef