dom/media/fmp4/apple/AppleVDADecoder.cpp
@@ -402,7 +402,7 @@ AppleVDADecoder::InitializeSession()
                      &mDecoder);
 
   if (rv != noErr) {
-    NS_ERROR("AppleVDADecoder: Couldn't create decoder!");
+    NS_WARNING("AppleVDADecoder: Couldn't create hardware VDA decoder");
     return NS_ERROR_FAILURE;
   }
 
@@ -504,7 +504,6 @@ AppleVDADecoder::CreateVDADecoder(
   nsRefPtr<AppleVDADecoder> decoder =
     new AppleVDADecoder(aConfig, aVideoTaskQueue, aCallback, aImageContainer);
   if (NS_FAILED(decoder->Init())) {
-    NS_ERROR("AppleVDADecoder an error occurred");
     return nullptr;
   }
   return decoder.forget();
